<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewDefault"
    tools:context="com.example.android.quiz_o_matic3000.MainActivity">

    <!-- List of questions-->
    <LinearLayout
        style="@style/LayoutDefault"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <!-- Question 1: Card-->
        <RelativeLayout
            style="@style/CardLayout"
            android:layout_marginTop="16dp">

            <!-- Question 1: Image-->
            <ImageView
                android:id="@+id/q1_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q1" />

            <LinearLayout
                android:id="@+id/q1_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q1_image"
                android:layout_toRightOf="@id/q1_image">

                <!-- Question 1: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q1" />

                <!-- Question 1: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a1_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a1_yes" />

                    <RadioButton
                        android:id="@+id/a1_no"
                        style="@style/CardAnswers"
                        android:text="@string/a1_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 2: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 2: Image-->
            <ImageView
                android:id="@+id/q2_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q2" />

            <LinearLayout
                android:id="@+id/q2_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q2_image"
                android:layout_toRightOf="@id/q2_image">

                <!-- Question 2: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q2" />

                <!-- Question 2: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a2_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a2_yes" />

                    <RadioButton
                        android:id="@+id/a2_no"
                        style="@style/CardAnswers"
                        android:text="@string/a2_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 3: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 3: Image-->
            <ImageView
                android:id="@+id/q3_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q3" />

            <LinearLayout
                android:id="@+id/q3_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q3_image"
                android:layout_toRightOf="@id/q3_image">

                <!-- Question 3: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q3" />

                <!-- Question 3: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a3_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a3_yes" />

                    <RadioButton
                        android:id="@+id/a3_no"
                        style="@style/CardAnswers"
                        android:text="@string/a3_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 4: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 4: Image-->
            <ImageView
                android:id="@+id/q4_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q4" />

            <LinearLayout
                android:id="@+id/q4_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q4_image"
                android:layout_toRightOf="@id/q4_image">

                <!-- Question 4: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q4" />

                <!-- Question 4: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a4_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a4_yes" />

                    <RadioButton
                        android:id="@+id/a4_no"
                        style="@style/CardAnswers"
                        android:text="@string/a4_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 5: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 5: Image-->
            <ImageView
                android:id="@+id/q5_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q5" />

            <LinearLayout
                android:id="@+id/q5_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q5_image"
                android:layout_toRightOf="@id/q5_image">

                <!-- Question 5: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q5" />

                <!-- Question 5: Textfield-->
                <EditText
                    android:id="@+id/a5_text"
                    style="@style/CardAnswers"
                    android:hint="@string/a5_hint"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 6: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 6: Image-->
            <ImageView
                android:id="@+id/q6_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q6" />

            <LinearLayout
                android:id="@+id/q6_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q6_image"
                android:layout_toRightOf="@id/q6_image">

                <!-- Question 6: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q6" />

                <CheckBox
                    android:id="@+id/a6_1"
                    style="@style/CheckboxAnswers"
                    android:text="@string/a6_1" />

                <CheckBox
                    android:id="@+id/a6_2"
                    style="@style/CheckboxAnswers"
                    android:text="@string/a6_2" />

                <CheckBox
                    android:id="@+id/a6_3"
                    style="@style/CheckboxAnswers"
                    android:text="@string/a6_3" />

                <CheckBox
                    android:id="@+id/a6_4"
                    style="@style/CheckboxAnswers"
                    android:text="@string/a6_4" />

            </LinearLayout>
        </RelativeLayout>

        <!-- Question 7: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 7: Image-->
            <ImageView
                android:id="@+id/q7_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q7" />

            <LinearLayout
                android:id="@+id/q7_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q7_image"
                android:layout_toRightOf="@id/q7_image">

                <!-- Question 7: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q7" />

                <!-- Question 7 Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a7_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a7_yes" />

                    <RadioButton
                        android:id="@+id/a7_no"
                        style="@style/CardAnswers"
                        android:text="@string/a7_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 8: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 8: Image-->
            <ImageView
                android:id="@+id/q8_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q8" />

            <LinearLayout
                android:id="@+id/q8_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q8_image"
                android:layout_toRightOf="@id/q8_image">

                <!-- Question 8: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q8" />

                <!-- Question 8: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a8_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a8_yes" />

                    <RadioButton
                        android:id="@+id/a8_no"
                        style="@style/CardAnswers"
                        android:text="@string/a8_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 9: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 9: Image-->
            <ImageView
                android:id="@+id/q9_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q9" />

            <LinearLayout
                android:id="@+id/q9_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q9_image"
                android:layout_toRightOf="@id/q9_image">

                <!-- Question 9: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q9" />

                <!-- Question 9: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a9_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a9_yes" />

                    <RadioButton
                        android:id="@+id/a9_no"
                        style="@style/CardAnswers"
                        android:text="@string/a9_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <!-- Question 10: Card-->
        <RelativeLayout style="@style/CardLayout">

            <!-- Question 10: Image-->
            <ImageView
                android:id="@+id/q10_image"
                style="@style/CardImageView"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/q10" />

            <LinearLayout
                android:id="@+id/q10_text"
                style="@style/CardInsideLayout"
                android:layout_toEndOf="@id/q10_image"
                android:layout_toRightOf="@id/q10_image">

                <!-- Question 10: Question-->
                <TextView
                    style="@style/CardQuestion"
                    android:text="@string/q10" />

                <!-- Question 10: Answers-->
                <RadioGroup style="@style/LayoutDefault">

                    <RadioButton
                        android:id="@+id/a10_yes"
                        style="@style/CardAnswers"
                        android:text="@string/a10_yes" />

                    <RadioButton
                        android:id="@+id/a10_no"
                        style="@style/CardAnswers"
                        android:text="@string/a10_no" />
                </RadioGroup>
            </LinearLayout>
        </RelativeLayout>

        <Button
            style="@style/ButtonCheck"
            android:onClick="checkAnswers"
            android:text="@string/button" />
    </LinearLayout>

</ScrollView>
